0031808: Visualization - NULL dereference in Graphic3d_Structure::IsDisplayed() on Removed presentation

Added a NULL check for IsDisplayed(), IsHighlighted(), IsTransformed(), IsVisible(), etc.